# pAIssive_income

./: .actrc  .augment-guidelines  .bandit  .clinerules  .codeqlignore  .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .flake8  .gitignore  .gitleaks.toml  .lintignore  .mergify.yml  .mocharc.json  .mypy.ini  .mypy_exclude  .pre-commit-config.yaml  .pre-commit-mypy.ini  .roomodes  .ruff.toml  .taskmasterconfig  .trivyignore  .uv.toml  .windsurfrules  AGENT.md  AmazonQ.md  BANDIT_SECURITY_SCAN_FIX.md  CLAUDE.md  COMMIT_MESSAGE.md  COMMIT_READY_PR_139_FIXES.md  CONTRIBUTING.md  CopilotKit_CrewAI_Integration.md  DOCKER_COMPOSE.md  Dockerfile  FINAL_COMMIT_SUMMARY.md  FINAL_PR_139_WORKFLOW_FIXES_SUMMARY.md  FINAL_PR_139_WORKFLOW_STATUS.md  (+464 more)
.github/: PULL_REQUEST_TEMPLATE.md  bandit-job.yml  bandit-upload-steps.yml  dependabot.yml  mypy.ini  trivy.yml
.openhands/: setup.sh
adk_demo/: README.md  __init__.py  agents.py  main.py  mem0_enhanced_adk_agents.py  requirements.txt
agent_team/: README.md  __init__.py  crewai_agents.py  errors.py  mem0_enhanced_agents.py  schemas.py  team_config.py
ai_models/: README.md  __init__.py  __init__.py.new  __main__.py  agent_integration.py  artist_agent.py  async_utils.py  batch_inference.py  mock_adapters.py  mock_aiohttp.py  model_base_types.py  model_config.py  model_downloader.py  model_manager.py  model_types.py  model_versioning.py  performance_monitor.py  requirements.txt  schemas.py  version.py
api/: README.md  __init__.py  app.py  config.py  dependencies.py  errors.py  main.py  requirements.txt  server.py  version_manager.py
app_flask/: .mypy.ini  __init__.py  database.py  mcp_servers.py  models.py
artist_experiments/: Dockerfile.artist  README.md  __init__.py  docker-compose.artist.yml  math_problem_solving.py  multi_api_orchestration.py  requirements-artist.txt  run_artist.py  setup_artist_env.ps1  setup_artist_env.sh  test_artist_experiments.py
ci-reports/: workflow-analysis-report.md
cline_docs/: system_manifest.md
collaboration/: __init__.py  access_control.py  activity.py  comments.py  errors.py  export_import.py  integration.py  sharing.py  version_control.py  workspace.py
common_utils/: __init__.py  analysis_batch_utils.py  batch_utils.py  config_loader.py  date_utils.py  db_batch_utils.py  errors.py  exceptions.py  file_utils.py  json_utils.py  string_utils.py  tooling.py  validation.py  validation_utils.py
coverage/: coverage-summary.json  index.html  lcov.info
dev_tools/: __init__.py  build_docs.sh  deps_audit.sh  health_check.py  quick_lint.sh  security_audit.sh  type_check.sh
docs/: ARTIST_integration.md  CrewAI_CopilotKit_Integration.md  GRADUAL_LINT_STRATEGY.md  Product_Requirements_Document.md  README.md  README_mem0.md  advanced_logging.md  ag-ui-docker-compose-fix.md  agent-team.md  ai-models.md  alert_system.md  api-reference.md  api_error_handling.md  artist-experiments.md  auth_system_design.md  bandit_configuration.md  bandit_configuration_changes.md  changelog.md  ci-environment-detection.md  ci_cd_pipeline.md  ci_compatibility_improvements.md  codeql_auto_fix_disabled.md  codeql_workflow_fixes.md  collaboration.md  common-utils-tooling.md  container-deployment.md  containerization.md  contributing.md  cursor_integration.md  dashboard_authentication.md  dependencies.md  deployment-architecture.md  deployment_guide.md  devops-workflow.md  docker-build-push-action-update.md  docker-compose-ci-improvements.md  docker-compose-workflows.md  docker_compose_workflow_optimizations.md  documentation-check-workflow.md  documentation-guide.md  (+83 more)
docs_source/: generate_api_docs.py
examples/: __init__.py  mem0_enhanced_agents_example.py  mem0_integration_example.py  test_mem0_local.py
flask/: __init__.py  models.py  sessions.py
hypothesis/: __init__.py
interfaces/: __init__.py  agent_interfaces.py  health_interfaces.py  knowledge_interfaces.py  marketing_interfaces.py  model_interfaces.py  monetization_interfaces.py  niche_interfaces.py  ui_interfaces.py
junit/: test-results-3.10.xml  test-results-3.11.xml  test-results-3.12.xml  test-results-3.9.xml  test-results.xml
kubernetes/: configmap.yaml  deployment.yaml  paissive-income-data-pvc.yaml  paissive-income-logs-pvc.yaml  persistent-volume-claims.yaml  service.yaml
market_analysis/: __init__.py  competitive_intelligence.py  errors.py  market_trends.py
marketing/: README.md  __init__.py  ab_testing.py  ab_testing_demo.py  campaign_tracking.py  campaign_tracking_demo.py  channel_strategies.py  concrete_strategy_generator.py  content_generator_impl.py  content_generators.py  content_generators_demo.py  content_optimization.py  content_optimization_demo.py  content_performance.py  content_performance_demo.py  content_templates.py  content_templates_demo.py  errors.py  marketing_plan.py  roi_analyzer.py  schemas.py  service.py  social_media_integration.py  statistical_analysis.py  statistical_framework.py  strategy_generator.py  strategy_generator.py.new  style_adjuster.py  style_adjuster_demo.py  tone_analyzer.py  user_personas.py
migrations/: README  alembic.ini  docker-compose.yml  env.py
mock_adk/: README.md  __init__.py  pyproject.toml  setup.py
mock_crewai/: __init__.py  agent.py  crew.py  custom_types.py  task.py  tools.py  types.py
mock_mcp/: __init__.py
mock_mem0/: __init__.py
monetization/: README.md  __init__.py  billing_calculator.py  billing_demo.py  calculator.py  custom_pricing.py  custom_pricing_demo.py  errors.py  invoice.py  invoice_delivery.py  invoice_demo.py  invoice_manager.py  metered_billing.py  metered_billing_demo.py  mock_payment_processor.py  mock_payment_processor_impl.py  monetization_demo.py  payment_gateway.py  payment_method.py  payment_method_demo.py  (+35 more)
sdk/python/: README.md  pyproject.toml  python_setup.py  setup.py
sdk/python/paissive_income_sdk/: __init__.py  auth.py  client.py
sdk/python/paissive_income_sdk/services/: __init__.py  agent_team.py  ai_models.py  api_key.py  base.py  dashboard.py  marketing.py  monetization.py  niche_analysis.py  user.py
(+1741 files in other folders)
